2.14 - ?
	- API: Allow extra whitespace after "get .." command
	- API: Allow non-numbers as "clientver" for the login command
	- API: Added "image_nsfw" member to "get vn"

2.14 - 2010-11-28
	- Improved filter selection interface for the release and VN browser
	- New release filters: voiced, animation and original language
	- New VN filters: length, "has anime" and original language
	- Apply search query and filters when changing first char
	- Added Atom feeds for the recent announcements, changes and posts
	  (located in /www/feeds and updated every 15 min. by Multi::Feed)
	- Re-added producer role to collapsed view on producer pages
	- JS: Reverted to the old selection box date selector
	- JS: Split script.js into a separate file for each language
	- Improved performance of update_vnpopularity() on PostgreSQL 9.0
	- Faster and improved bb2html()
	- Added WHEN clause to all SQL TRIGGERs for which it was useful
	  (this *requires* PostgreSQL 9.0 or up!)
	- Added ON DELETE clause to all foreign keys referencing users (id)
	- Use word-level (instead of character-level) diff for large fields
	- Extended IE6 warning message to show up for IE7 as well

2.13 - 2010-11-11
	- Added 'formcode' parameter to all modification requests to fix all
	  cross-site request forgery vulnerabilities
	- URL change: /u/logout => /u$id/logout
	- Added human confirmation question to the register page
	- Added "official" flag to vn<->vn relations
	- Display releases grouped by VNs on producer pages
	- Optimized SQL queries:
	  - dbScreenshotRandom()
	  - dbVNGet() with random ordering
	  - dbRevisionGet() (in most cases)
	- Removed (p###) from release resolution information
	- Replaced Algorithm::Diff::XS with Algorithm::Diff::Fast
	- Bugfix: delete/update all references when deleting a user
	- Bugfix: reverting a VN image now works

2.12 - 2010-11-03
	- !scr command for Multi::IRC
	- API: Added 'image' field to get vn
	- API: Slightly improved error messages