@@ -2,6 +2,7 @@
 	- API: Allow extra whitespace after "get .." command
 	- API: Allow non-numbers as "clientver" for the login command
 	- API: Added "image_nsfw" member to "get vn"
+	- API: Added "results" option to the "get .. {}"
 
 2.14 - 2010-11-28
 	- Improved filter selection interface for the release and VN browser
